examples/test/testpolicy7960.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7960
  namespace: namespace76
spec:
  podSelector:
    matchLabels:
      key48: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value8
      podSelector:
        matchLabels:
          key20: value30
          key31: value39
          key49: value26
